# cmake-microchip

./: README.md  microchip_toolchain.cmake  toolchain.cmake
Modules/: MicrochipBin2Hex.cmake  MicrochipVersionConverter.cmake
Modules/Platform/: MicrochipMCU-C-XC-DSC.cmake  MicrochipMCU-C.cmake  MicrochipMCU.cmake
example/: CMakeLists.txt  main.c  regen_build.sh
